crates/plotnik-tests/tests/04-emit/types/definitions/error_captured_match_only_ref.txt
Seq = {
  (expression_statement)
  (debugger_statement)
}

Q = (program (Seq) @x)
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(Seq)` because `Seq` produces no result value
 --> query.ptk:6:14
  |
1 | / Seq = {
2 | |   (expression_statement)
3 | |   (debugger_statement)
4 | | }
  | |_- `Seq` is defined here
5 |
6 |   Q = (program (Seq) @x)
  |                ^^^^^
  |
help: make `Seq` produce a result by changing `(expression_statement)` to `(expression_statement) @x_value` in definition `Seq`
help: or remove `@x` and capture a node pattern directly
